Changelog
=========

12.1-dev0 - (unreleased)
---------------------------

12.0 - (2021-04-17)
---------------------------
* Bug fix: Remove collective.taxonomy pin to older version
  [avoinea refs #130852]

11.9 - (2021-03-30)
---------------------------
* Bug fix: fixed upgrade step regarding the country groups.
  [alecghica refs #126549]

11.8 - (2021-03-11)
---------------------------
* Task: Removed geotags from eea.geotags and ported them to eea.geolocation
  [iulianpetchesi refs #122622]

11.7 - (2020-08-03)
---------------------------
* Task: Added 3 new EU country groups for geotags EU27_2020/EEA32_2020/EEA38_2020
  [iulianpetchesi refs #116816]

11.6 - (2020-04-28)
--------------------------
* Bug fix: include plone.behavior in ZCML
  [alecghica refs #111954]

11.5 - (2019-08-05)
---------------------------
* Bug fix: fixed MANIFEST.in to include docs and txt files in egg release
  [valentinab refs #106933]

11.4 - (2019-07-30)
--------------------------
* Bug fix: fixed HISTORY.txt structure and some cosmetics
  [alecghica refs #106742]

11.2 - (2019-07-22)
--------------------------
* Task: Updated migration script and added upgrade step to fix Czechia country name
  [iulianpetchesi refs #106742]

11.0 - (2019-07-17)
--------------------------
* Change: Added email paramater and fixed geo widget macedonia name
  [iulianpetchesi refs #106742]

10.9 - (2019-07-16)
--------------------------
* Task: Updated migration script and added upgrade step to fix macedonia country name
  [iulianpetchesi refs #106742]

10.8 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

10.7 - (2019-01-17)
--------------------------
* Feature: fully serve OpenLayers over HTTPS
  [alecghica refs #101256]
* Feature: serve OpenLayers tiles stored locally
  [alecghica refs #101256]
* Bug fix: fixed loading of resources from grips skin folder
  [alecghica refs #101256]

10.6 - (2018-09-05)
--------------------------