@@ -35,7 +35,7 @@ class BioGroups(object):
             vocabulary = taxonomy.makeVocabulary('en')
 
         for value, key in vocabulary.iterEntries():
-            value = value.encode('ascii', 'ignore').decode('ascii')
+            value = value.encode('latin-1', 'ignore').decode('latin-1')
 
             if identifier not in value:
                 identifier = value
