@@ -32,7 +32,7 @@ class Countries_Mapping(object):
             vocabulary = taxonomy.makeVocabulary('en')
 
         for value, key in vocabulary.iterEntries():
-            value = value.encode('ascii', 'ignore').decode('ascii')
+            value = value.encode('latin-1', 'ignore').decode('latin-1')
 
             if identifier not in value:
                 identifier = value
