@@ -3,6 +3,9 @@ Changelog
 
 12.1-dev0 - (unreleased)
 ---------------------------
+* Change: Changed encoding from ascii to latin-1 in order to better
+  represent ascii characters in taxonomies
+  [iulianpetchesi refs #153129]
 
 12.0 - (2021-04-17)
 ---------------------------
